<resources>
    <string name="app_name">ConnectNow</string>
    <string name="welcome_back">welcome Back!</string>
    <string name="login_to_continue">login to continue</string>
    <string name="connectnow">ConnectNow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message...</string>
    <string name="online">Online</string>
</resources>