<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/create_new_account"
        android:fontFamily="@font/myfont"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"/>

    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        >
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            />
        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/secondary_text"
            />
    </FrameLayout>

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/background_input"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:hint="@string/name"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/primary_text"
        android:fontFamily="@font/myfont"
        />
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:hint="@string/email"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/primary_text"
        android:fontFamily="@font/myfont"
        />
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:hint="@string/password"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/primary_text"
        android:fontFamily="@font/myfont"
        />
    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:hint="@string/confirm_password"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/primary_text"
        android:fontFamily="@font/myfont"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:animateLayoutChanges="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:textSize="@dimen/_18ssp"
            app:cornerRadius="@dimen/_8sdp"
            android:fontFamily="@font/myfont"
            android:textStyle="bold"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="#03A9F4"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sign_in"
        android:textColor="@color/primary"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        />
</LinearLayout>
</ScrollView>